dec - 'helpers.js' was missing from index

--- a/blocks 2.0/html/index.html
+++ b/blocks 2.0/html/index.html
@@ -35,6 +35,7 @@
 	
 	//define script files
 	var scripts = [
+		'blocks/code/helpers.js',
 		'blocks/code/settings.js',
 		'blocks/code/objects.js',
 		'blocks/code/buttons.js', 
