--- a/blocks 2.0/html/indexDesigner.html
+++ b/blocks 2.0/html/indexDesigner.html
@@ -448,7 +448,7 @@
 	
 	function moveClick(e)
 	{
-		drawScaledLevel(2, cx[FRONT], e.clientX, e.clientY, 200, 200);
+		//drawScaledLevel(2, cx[FRONT], e.clientX, e.clientY, 200, 200);
 		if(popup.act == null) return
 		
 		if(popup.act == DEFAULT || popup.act == GRID_SQUARE) updatePop(e);
