--- a/blocks 2.0/html/indexDesigner.html
+++ b/blocks 2.0/html/indexDesigner.html
@@ -29,6 +29,17 @@
 	
 	const MENU = 0;
 	const DESIGN = 1;
+	
+	var jumpSnd = 0;
+	var lavaSnd = 1;
+	var trampSnd = 2;
+	var grassSnd = 3;
+	var iceSnd = 4;
+	var swoopSnd = 5;
+	var fallSnd = 6;
+	var winSnd = 7;
+	var portalSnd = 8;
+	var winTheme = 9;
 </script>
 
 
